--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -9,12 +9,19 @@
 
     <form action="/account/hello_world/" method = "post">
       {%csrf_token %}
-      <input type="submit" class = "btn btn-primary" value="POST">
-    </form>
+      <div>
+        <input type="text" name = "hello_world_input">
+      </div>
+      <div>
+        <input type="submit" class = "btn btn-primary" value="POST">
+      </div>
 
+    </form>
+    {% if hello_world_output %}
     <h1>
-      {{text}}
+      {{hello_world_output.text}}
     </h1>
+    {% endif %}
   </div>
 
 {% endblock %}
