--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-  <div style="height: 20rem; background-color: #38df81; border-radius: 1rem; margin: 2rem;">
-    <h1>
+  <div style="border-radius: 1rem; margin: 2rem; text-align: center">
+    <h1 style="font-family: 'PT Serif', serif;">
       testing
     </h1>
 
@@ -17,10 +17,12 @@
       </div>
 
     </form>
-    {% if hello_world_output %}
-    <h1>
-      {{hello_world_output.text}}
-    </h1>
+    {% if hello_world_list %}
+      {% for hello_world in hello_world_list %}
+      <h1>
+        {{hello_world.text}}
+      </h1>
+      {% endfor %}
     {% endif %}
   </div>
 
