--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -21,61 +21,34 @@
 
 
 </style>
-
+    {% if article_list %}
     <div class="container">
-      <div class="item1">
-        <img src="http://picsum.photos/200/300" alt="">
-      </div>
-      <div>
-        <img src="http://picsum.photos/200/340" alt="">
-      </div>
-      <div>
-        <img src="http://picsum.photos/200/260" alt="">
-      </div>
-      <div>
-        <img src="http://picsum.photos/200/400" alt="">
-      </div>
-      <div>
-        <img src="http://picsum.photos/200/510" alt="">
-      </div>
-      <div>
-        <img src="http://picsum.photos/200/300" alt="">
-      </div>
-      <div>
-        <img src="http://picsum.photos/200/250" alt="">
-      </div>
-      <div>
-        <img src="http://picsum.photos/200/200" alt="">
-      </div>
-      <div>
-        <img src="http://picsum.photos/200/440" alt="">
-      </div>
-      <div>
-        <img src="http://picsum.photos/200/410" alt="">
-      </div>
-      <div>
-        <img src="http://picsum.photos/200/320" alt="">
-      </div>
-      <div>
-        <img src="http://picsum.photos/200/180" alt="">
-      </div>
-      <div>
-        <img src="http://picsum.photos/200/260" alt="">
-      </div>
-      <div>
-        <img src="http://picsum.photos/200/290" alt="">
-      </div>
+      {% for article in article_list %}
+      <a href="{% url 'articleapp:detail' pk=article.pk %}">
+        {% include 'snippets/card.html' with article=article %} <!--왼쪽의 article이 card.html의 article과 같이 쓸 것이다-->
+      </a>
+      {% endfor %}
     </div>
+
+    <script src="{% static 'js/magicgrid.js' %}"></script>
+
+    {% else %}
+
+    <div class ="text-center">
+      <h1>No Articles YET!</h1>
+    </div>
+    {% endif %}
+
+    {% include 'snippets/pagination.html' with page_obj=page_obj %}
+
 
     <div style="text-align: center">
       <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
         Create Article
       </a>
-      <a href="{% url 'articleapp:delete' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
+      <a href="{% url 'articleapp:delete' pk=target_article.pk %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
         Delete Article
       </a>
     </div>
 
-
-    <script src="{% static 'js/magicgrid.js' %}"></script>
 {% endblock %}
