--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -28,6 +28,10 @@
         {% endif %}
         <hr>
 
+        {% for comment in target_article.comment.all %}
+            {% include 'commentapp/detail.html' with comment=comment%}
+        {% endfor %}
+
         {% include 'commentapp/create.html' with article=target_article %}
         <!--article에 현재 사용하는 target_article 동기화-->
 
