django course 39 commit

--- a/static/base.css
+++ b/static/base.css
@@ -15,3 +15,10 @@
     text-align:center;
     margin : 2rem 0;
 }
+
+@media screen and (max-width:500px) {
+    html {
+        font-size: 13px;
+    }
+}
+/*screen의 너비가 500px 아래로 떨어지면 적용*/
