--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -4,9 +4,19 @@
 {% block content %}
 <style>
 
+    .container {
+        padding: 0;
+        margin: 0, auto;
+    }
+<!--    container는 기본적으로 bootstrap에 padding이랑 margin이 섞여있어서 이를 제거-->
+
+    .container a {
+      width: 45%:
+      max-width: 250px;
+    }
+<!--    모바일 사이즈에서는 45%를 차지, pc에서는 250px를 차지-->
+
     .container div {
-      width: 250px;
-      background-color: antiquewhite;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -29,7 +39,6 @@
       </a>
       {% endfor %}
     </div>
-
     <script src="{% static 'js/magicgrid.js' %}"></script>
 
     {% else %}
@@ -41,14 +50,13 @@
 
     {% include 'snippets/pagination.html' with page_obj=page_obj %}
 
-
     <div style="text-align: center">
-      <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
+      <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill mt-3 mb-3 px-3">
         Create Article
       </a>
-      <a href="{% url 'articleapp:delete' pk=target_article.pk %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
-        Delete Article
-      </a>
+<!--      <a href="{% url 'articleapp:delete' pk=target_article.pk %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">-->
+<!--        Delete Article-->
+<!--      </a>-->
     </div>
 
 {% endblock %}
