django course 40 commit

--- a/static/base.css
+++ b/static/base.css
@@ -21,4 +21,20 @@
         font-size: 13px;
     }
 }
-/*screen의 너비가 500px 아래로 떨어지면 적용*/
+
+.a {
+    color: black;
+}
+
+a:hover{
+    color: black;
+    text-decoration: none;
+}
+
+pragmatic_header_nav {
+    margin: 0 0.5rem;
+}
+
+.pragmatic_header_navbar {
+    margin: 1rem 0;
+}
