--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -7,7 +7,8 @@
         {% if target_user.profile %}
 
         <img src="{{ target_user.profile.image.url }}" alt=""
-             style="height: 12rem; width: 12rem; border-radius: 20rem; margin-bottom: 2rem;">
+             style="height: 12rem; width: 12rem; border-radius: 20rem; margin-bottom: 2rem; object_fit: cover;">
+<!--        object_fit:cover; : 이미지들이 찌그러지지 않게 -->
 
         <h2 style="font-family: "NanumSquareB">
           {{ target_user.profile.nickname }}
