--- a/projectapp/templates/projectapp/detail.html
+++ b/projectapp/templates/projectapp/detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div>
-    <div style="text-align:center; max-width:500px; margin:4rem auto">
+      <div style="text-align:center; max-width:500px; margin:4rem auto">
 
         <img src="{{ target_project.image.url }}" alt=""
              style="height: 12rem; width: 12rem; border-radius: 20rem; margin-bottom: 2rem; object_fit: cover;">
@@ -12,7 +12,10 @@
         <h5 style="margin-bottom: 3rem;">
             {{ target_project.profile.message }}
         </h5>
-    </div>
+      </div>
+      <div>
+          {% include  'snippets/list_fragment.html' with article_list=object_list %}
+      </div>
   </div>
 
 {% endblock %}
