--- a/projectapp/templates/projectapp/detail.html
+++ b/projectapp/templates/projectapp/detail.html
@@ -2,17 +2,35 @@
 
 {% block content %}
   <div>
-      <div style="text-align:center; max-width:500px; margin:4rem auto">
+      <div style="text-align:center; max-width:500px; margin:4rem auto 1.5rem auto;">
+<!--          margin이 4개 : 위 아래 오른쪽 왼쪽 순-->
 
         <img src="{{ target_project.image.url }}" alt=""
              style="height: 12rem; width: 12rem; border-radius: 20rem; margin-bottom: 2rem; object_fit: cover;">
         <h2 style="font-family: "NanumSquareB"">
             {{ target_project.profile.nickname }}
         </h2>
-        <h5 style="margin-bottom: 3rem;">
+        <h5>
             {{ target_project.profile.message }}
         </h5>
       </div>
+
+      <div class="text-center mb-5">
+          {% if user.is_authenticated %}
+              {% if not subscription %}
+              <a href="{% url 'subscribeapp:subscribe' %}?project_pk={{ target_project.pk }}" class="btn btn-primary rounded-pill px-4">
+    <!--              get방식으로 target_project의 pk를 project_pk로 넘겨줌-->
+                  Subscribe
+              </a>
+              {% else %}
+              <a href="{% url 'subscribeapp:subscribe' %}?project_pk={{ target_project.pk }}" class="btn btn-dark rounded-pill px-4">
+                  Unsubscribe
+              </a>
+              {% endif %}
+          {% endif %}
+      </div>
+
+
       <div>
           {% include  'snippets/list_fragment.html' with article_list=object_list %}
       </div>
