--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -14,9 +14,10 @@
         <img style="width: 100%; border-radius: 1rem; margin: 2rem 0;"
              src="{{ target_article.image.url }}" alt="">
 
-        <p>
-            {{ target_article.content}}
-        </p>
+        <div class="text-left">
+            {{ target_article.content | safe}}
+<!--            태그로 감싸져있는 거 말고 내용만 가져옴-->
+        </div>
 
         {% if target_article.writer == user %}
         <a href="{% url 'articleapp:update' pk=target_article.pk %}" class = "btn btn-primary rounded-pill col-3">
