django course 45 commit

--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -1,29 +1,29 @@
-{% extends 'base.html' %}
+<!--{% extends 'base.html' %}-->
 
-{% block content %}
+<!--{% block content %}-->
 
-  <div style="border-radius: 1rem; margin: 2rem; text-align: center;">
-    <h1 style="font-family: 'PT Serif', serif;">
-      testing
-    </h1>
+<!--  <div style="border-radius: 1rem; margin: 2rem; text-align: center;">-->
+<!--    <h1 style="font-family: 'PT Serif', serif;">-->
+<!--      testing-->
+<!--    </h1>-->
 
-    <form action="/accounts/hello_world/" method = "post">
-      {%csrf_token %}
-      <div>
-        <input type="text" name = "hello_world_input">
-      </div>
-      <div>
-        <input type="submit" class = "btn btn-primary" value="POST">
-      </div>
-    </form>
+<!--    <form action="/accounts/hello_world/" method = "post">-->
+<!--      {%csrf_token %}-->
+<!--      <div>-->
+<!--        <input type="text" name = "hello_world_input">-->
+<!--      </div>-->
+<!--      <div>-->
+<!--        <input type="submit" class = "btn btn-primary" value="POST">-->
+<!--      </div>-->
+<!--    </form>-->
 
-    {% if hello_world_list %}
-      {% for hello_world in hello_world_list %}
-      <h1>
-        {{ hello_world.text }}
-      </h1>
-      {% endfor %}
-    {% endif %}
-  </div>
+<!--    {% if hello_world_list %}-->
+<!--      {% for hello_world in hello_world_list %}-->
+<!--      <h1>-->
+<!--        {{ hello_world.text }}-->
+<!--      </h1>-->
+<!--      {% endfor %}-->
+<!--    {% endif %}-->
+<!--  </div>-->
 
-{% endblock %}
+<!--{% endblock %}-->
