--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -13,7 +13,10 @@
             <h2 style="font-family: "NanumSquareB">
               {{ target_user.profile.nickname }}
                 {% if target_user == user %}
-                  <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
+                  <a class = "material-icons"
+                     style="box-shadow: 0 0 4px #ccc; border-radius: 10rem; padding: .4rem;"
+                    <!-- 첫, 두번째는 그림자의 위치, 세번째는 그림자의 크기, 네번째는 색갈-->
+                     href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
                       edit
                   </a>
                 {% endif %}
@@ -36,14 +39,20 @@
             {% endif %}
 
             {% if target_user == user %}
-            <a href="{% url 'accountapp:update' pk=user.pk %}">
+            <a class = "material-icons"
+               style="box-shadow: 0 0 4px #ccc; border-radius: 10rem; padding: .4rem;"
+               href="{% url 'accountapp:update' pk=user.pk %}">
                 <p>
-                    Change Info
+<!--                    Change Info-->
+                    settings
                 </p>
             </a>
-            <a href="{% url 'accountapp:delete' pk=user.pk %}">
+            <a class = "material-icons"
+               style="box-shadow: 0 0 4px #fcc; border-radius: 10rem; padding: .4rem;"
+               href="{% url 'accountapp:delete' pk=user.pk %}">
                 <p>
-                    Quit
+<!--                    Quit-->
+                    cancel
                 </p>
             </a>
             {% endif %}
